Add link to Laudos in navigation menu

--- a/agendamentos.html
+++ b/agendamentos.html
@@ -16,6 +16,7 @@
       <a href="financeiro.html">💰 Financeiro</a>
       <a href="agendamentos.html" class="active">📅 Agendamentos</a>
       <a href="mensagens.html">💬 Mensagens</a>
+      <a href="laudos.html">📄 Laudos</a>
     </nav>
     <button class="btn logout" onclick="window.location.href='index.html'">Sair</button>
   </aside>
