--- a/pacientes.html
+++ b/pacientes.html
@@ -17,6 +17,7 @@
       <a href="agendamentos.html">📅 Agendamentos</a>
       <a href="mensagens.html">💬 Mensagens</a>
       <a href="laudos.html">📄 Laudos</a>
+      <a href="estoque.html">📦 Estoque</a>
     </nav>
     <button class="btn logout" onclick="window.location.href='index.html'">Sair</button>
   </aside>
