--- a/laudos.html
+++ b/laudos.html
@@ -18,6 +18,7 @@
       <a href="agendamentos.html">📅 Agendamentos</a>
       <a href="laudos.html" class="active">🩺 Laudos e Recomendações</a>
       <a href="mensagens.html">💬 Mensagens</a>
+      <a href="estoque.html">📦 Estoque</a>
     </nav>
     <button class="btn logout" onclick="window.location.href='index.html'">Sair</button>
   </aside>
